# kiro-generator

./: .gitignore  Cargo.toml  README.md
.github/ci-configs/: rust.yml
.github/workflows/: pages.yml
.kiro/generators/: aws-test.kdl  aws-test.toml  base.kdl  base.toml  dependabot.kdl  kg.kdl  kg.toml
.kiro/global/: aws-test.kdl  kg.kdl
docs/: book.toml
docs/src/: SUMMARY.md  index.md  migrate.md  quickstart.md  refernce.md  usage.md
docs/src/config/: agents.md  files.md  inheritance.md  skeletons.md
docs/src/reference/: cli.md  schema.md
example/.kiro/generators/: default.toml  kg.toml  rust.toml
schemas/: agent-v1.json  kg.json  kiro-agent.json
src/: commands.rs  config.rs  main.rs  merging_format.rs  output.rs  source.rs
src/agent/: custom_tool.rs  hook.rs  kg_agent.rs  mcp_config.rs  mod.rs  tools.rs  wrapper_types.rs
src/config/: agent.rs  agent_file.rs  hook.rs  mcp.rs  merge.rs  native.rs
src/generator/: config_location.rs  discover.rs  merge.rs  mod.rs
src/kdl/: agent.rs  agent_file.rs  hook.rs  mcp.rs  merge.rs  mod.rs  native.rs
src/os/: mod.rs
src/os/fs/: mod.rs
