[package]
name = "kiro-generator"
version = "0.1.0"
edition = "2024"
description = "Kiro CLI configuration management"
repository = "https://github.com/CarteraMesh/q-generator"
license = "MIT"
authors = ["gh@cartera-mesh.com"]
documentation = "https://docs.rs/q-generator"
homepage = "https://github.com/CarteraMesh/q-generator"
keywords = ["kiro", "cli", "agents", "AI"]
categories = ["command-line-interface", "config"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.15" }
dirs = "6"
enum-iterator = "2.3.0"
eyre = "0.6"
futures = "0.3"
jsonschema = { version = "0.33", default-features = false, features = ["resolve-async", "resolve-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
toml = { version = "0.9" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
